<resources>
    <string name="app_name">Result Gate</string>
    <string name="powered_by" translatable="false">© Bellout 2024 | Developed\n BY e-RAMO V 1.6.0</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="developed_by">Developed By</string>
    <string name="www_e_ramo_net">www.e-RAMO.net</string>
    <string name="_201011559674" translatable="false">+2 01011559674</string>
    <string name="warning">Warning!</string>
    <string name="please_sign_in_first">Please sign in first!</string>
    <string name="log_in">Log In</string>
    <string name="log_inl">LOG IN</string>
    <string name="log_in_register">Log In/Register</string>
    <string name="promo_codes">Promo Codes</string>
    <string name="no_promo_codes_found">No promo codes found</string>
    <string name="about_us">About Us</string>
    <string name="all_categories">All Categories</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="total_s_egp">TOTAL: %s EGP</string>
    <string name="total_s_usd">TOTAL: %s USD</string>
    <string name="taxes_s_egp">TAXES: %s EGP</string>
    <string name="shipping_s_egp">SHIPPING: %s EGP</string>
    <string name="proceed_to_buy">Proceed to buy</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="save">Save</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="payment_completed">Payment Completed</string>
    <string name="thank_you_for_payment">Thank You For Payment :)</string>
    <string name="checkout">CHECKOUT</string>
    <string name="add_promo_code">Add promo code</string>
    <string name="total">Total</string>
    <string name="confirm_and_next"><![CDATA[Confirm & Next]]></string>
    <string name="payment_type">Payment Type</string>
    <string name="do_you_want_to_add_additional_options_to_your_order">Do you want to add additional options to your order?</string>
    <string name="contact_us">Contact Us</string>
    <string name="follow_us">Follow us</string>
    <string name="contact_us_directly">Contact us directly</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="i_am_not_a_robot">I am not a robot</string>
    <string name="send">send</string>
    <string name="favourites">Favourites</string>
    <string name="added_to_favourite_successfully">Added to favourite successfully</string>
    <string name="filter">Filter</string>
    <string name="price_egp">Price (EGP)</string>
    <string name="submit">Submit</string>
    <string name="if_you_forgot_your_password_enter_your_email_and_check_your_email">If you forgot your password enter your email and check your email</string>
    <string name="search">Search…</string>
    <string name="find_an_air_condition"><font size="14">WHAT DO YOU LOOK FOR...</font></string>
    <string name="latest_deals">LATEST DEALS</string>
    <string name="latest_products">LATEST PRODUCTS</string>
    <string name="all_products">All PRODUCTS</string>
    <string name="categories">CATEGORIES</string>
    <string name="bn_categories">Devises</string>
    <string name="brands">BRANDS</string>
    <string name="stores">Vendors</string>
    <string name="stores_bn">Stores</string>
    <string name="brands_drawer">Brands</string>
    <string name="browse_all_categories">Browse All Categories</string>
    <string name="browse_all_brands">Browse All Brands</string>
    <string name="browse_all_stores">Browse All Stores</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_login_using">Or login using</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_upl">SIGN UP</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="change_password">Change password</string>
    <string name="my_orders">My Orders</string>
    <string name="my_queries">My Queries</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="order_details">Order Details</string>
    <string name="order_number">Order number:</string>
    <string name="order_date">Order Date:</string>
    <string name="order_status">Order status:</string>
    <string name="totall">Total:</string>
    <string name="products">Products</string>
    <string name="products_bn">Products</string>
    <string name="extras">Extras</string>
    <string name="extra_total">Extra Total:</string>
    <string name="promo_codel">PROMO CODE:</string>
    <string name="discount_fees">DISCOUNT FEES:</string>
    <string name="extras_fees">EXTRA FEES:</string>
    <string name="pay_type">PAY TYPE:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="online_preview">Online Preview</string>
    <string name="which_device_types_do_you_prefer">Which device types do you prefer?</string>
    <string name="confirm_and_finish"><![CDATA[Confirm & Finish]]></string>
    <string name="cool_only">Cool only</string>
    <string name="hot_and_cold"><![CDATA[Hot & Cold]]></string>
    <string name="with_plasma">With plasma</string>
    <string name="without_plasma">Without plasma</string>
    <string name="in_which_floor">In which floor?</string>
    <string name="measure_the_longest_height_and_the_longest_width_in_the_room_as_shown_in_the_examples_below">Measure the longest height and the longest width in the room as shown in the examples below</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="start">Start</string>
    <string name="how_many_windows_in_the_room">How many windows in the room?</string>
    <string name="number_of_windows">Number of windows</string>
    <string name="what_would_you_like_to_apply_check_for">What would you like to apply check for?</string>
    <string name="line_a">line a</string>
    <string name="line_b">line b</string>
    <string name="line_c">line c</string>
    <string name="line_d">line d</string>
    <string name="line_e">line e</string>
    <string name="line_f">line f</string>
    <string name="line_g">line g</string>
    <string name="line_h">line h</string>
    <string name="select_the_most_close_shape_for_window_number_1">Select the most close shape for window number 1</string>
    <string name="installation_fees">Installation fees:</string>
    <string name="s_egp">%s EGP</string>
    <string name="s_usd">%s USD</string>
    <string name="perentt">%s%%</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="type">Type:</string>
    <string name="power">Power:</string>
    <string name="sub_type">Sub Type:</string>
    <string name="area_from">Area From:</string>
    <string name="cool_heat">Cool-Heat:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">BUY NOW</string>
    <string name="features">Features</string>
    <string name="extra_info">Extra info</string>
    <string name="description">Description</string>
    <string name="installment">Installment</string>
    <string name="al_ahly_bank_installment">Al Ahly Bank Installment</string>
    <string name="this_product_can_be_installed">This product can be installed:</string>
    <string name="by_filling_these_data_you_request_a_visit_to_your_place_to_make_installing_pipes_process_to_your_air_conditions_so_you_will_wait_a_call_from_our_side_within_48_hours_max_to_insure_your_visit_to_your_location_so_please_be_patient_and_wait_our_confirmation_call_and_for_more_details_or_questions_you_can_call_us_on_012_7027_5555_012_7028_5555">By filling these data, You request a visit to your place to make Installing Pipes process to your air conditions, so you will wait a call from our side within 48 hours MAX to insure your visit to your location. So please be patient and wait our confirmation call. And for more details or questions you can call us on 012 7027 5555 - 012 7028 5555</string>
    <string name="number_of_acs">Number of ACs</string>
    <string name="questions_and_requests">Questions and Requests</string>
    <string name="maintenance">Maintenance</string>
    <string name="installation">Installation</string>
    <string name="installing_pipes">Installing Pipes</string>
    <string name="request_site_visits">Request Site Visits</string>
    <string name="questions">Questions</string>
    <string name="result">Result</string>
    <string name="s_product">%s Products</string>
    <string name="re_password">Retype password</string>
    <string name="agree_to">Agree to</string>
    <string name="or_signup_using">Or signup using</string>
    <string name="have_an_account">Have an account?</string>
    <string name="installationl">Installation:</string>
    <string name="quantity">QUANTITY:</string>
    <string name="show_all_details">Show All Details</string>
    <string name="name">Name:</string>
    <string name="emaill">Email:</string>
    <string name="mobile">Mobile:</string>
    <string name="number_of_acsl">Number of ACS:</string>
    <string name="messagel">Message:</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="my_account">My Account</string>
    <string name="mo3ainaonline">Mo3ainaOnline</string>
    <string name="logout">Logout</string>
    <string name="want_to_pay_in_installments">Want to pay in installments?</string>
    <string name="egp_per_month">EGP Per Month</string>
    <string name="installment_period">INSTALLMENT PERIOD:</string>
    <string name="_6_month">6 MONTH</string>
    <string name="_12_month">12 MONTH</string>
    <string name="_15_month">15 MONTH</string>
    <string name="down_payment">DOWN PAYMENT:</string>
    <string name="_250">250</string>
    <string name="down_payment_can_not_be_less_than_25">down payment can not be less than 25%</string>
    <string name="please_fill_data">Please fill data</string>
    <string name="txt_email_is_required">Email is required</string>
    <string name="txt_please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="txt_please_enter_subject">Please enter a subject</string>
    <string name="txt_please_enter_verification_code">Please enter the verification code</string>
    <string name="txt_phone_is_required">Phone is required</string>
    <string name="txt_please_enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="txt_password_is_required">Password is required</string>
    <string name="txt_get_start">Get start</string>
    <string name="txt_full_name_is_required">Full name is required</string>
    <string name="are_you_robot">Are you a robot</string>
    <string name="txt_address_is_required">Address is required</string>
    <string name="txt_password_too_weak">Password too weak</string>
    <string name="txt_confirm_password_is_required">Confirm password is required</string>
    <string name="txt_password_not_match">Password not match</string>
    <string name="txt_accept_privacy_first">Please accept terms &amp; conditions</string>
    <string name="price_title">Price</string>
    <string name="sort_by">Sort By</string>
    <string name="by_low_price">By Lowe Price</string>
    <string name="by_high_price">By High Price</string>
    <string name="latest">By Newer</string>
    <string name="oldest">By Older</string>
</resources>