<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".presentation.ui.dialog.SortSearchResultDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/price_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:stepSize="10"
            android:valueFrom="0"
            android:valueTo="10000"
            app:labelBehavior="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:thumbColor="@color/eramo_color"
            app:tickVisible="false"
            app:trackColor="@color/eramo_color"
            app:values="@array/initial_slider_values2" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/gray_low"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider" />

        <TextView
            android:id="@+id/tvSortByPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSortByPrice">

            <RadioButton
                android:id="@+id/rbLowPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/eramo_color"
                android:text="@string/by_low_price" />

            <RadioButton
                android:id="@+id/rbHighPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:buttonTint="@color/eramo_color"
                android:text="@string/by_high_price" />

            <RadioButton
                android:id="@+id/rbLatest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:buttonTint="@color/eramo_color"
                android:text="@string/latest" />

            <RadioButton
                android:id="@+id/rbOldest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:buttonTint="@color/eramo_color"
                android:text="@string/oldest" />

        </RadioGroup>


        <Button
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:background="@drawable/shape_purple"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>