<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layoutDirection="locale"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_6sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_4sdp"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/DFLogIn_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibmplexsansbold"
            android:gravity="center"
            android:text="@string/warning"
            android:textAlignment="center"
            android:textColor="@color/eramo_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/please_sign_in_first"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DFLogIn_tv_title" />

        <Button
            android:id="@+id/DFLogIn_btn_cancel"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/shape_gray"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toStartOf="@+id/DFLogIn_btn_login"
            app:layout_constraintVertical_bias="0" />

        <Button
            android:id="@+id/DFLogIn_btn_login"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_44sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/shape_purple"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/DFLogIn_btn_cancel"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            app:layout_constraintVertical_bias="0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>