<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp"
    android:background="@drawable/shape_gray"
    android:elevation="@dimen/_6sdp"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8sdp"
        android:fontFamily="@font/ibmplexsansregular"
        android:text="@string/order_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemMyOrder_tv_numOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:fontFamily="@font/ibmplexsansregular"
        android:textColor="@color/eramo_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:text="Carrier" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/ibmplexsansregular"
        android:text="@string/order_date"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/itemMyOrder_tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmplexsansregular"
        android:textColor="@color/eramo_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/itemMyOrder_tv_numOrder"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        tools:text="Yes" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/ibmplexsansregular"
        android:text="@string/order_status"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/itemMyOrder_tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmplexsansregular"
        android:textColor="@color/eramo_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView25"
        app:layout_constraintStart_toStartOf="@+id/itemMyOrder_tv_numOrder"
        app:layout_constraintTop_toTopOf="@+id/textView25"
        tools:text="Yes" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmplexsansregular"
        android:text="@string/totall"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/itemMyOrder_tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ibmplexsansregular"
        android:textColor="@color/eramo_color"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="@+id/itemMyOrder_tv_numOrder"
        app:layout_constraintTop_toTopOf="@+id/textView28"
        tools:text="Yes" />

    <Button
        android:id="@+id/itemMyOrder_btn_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/shape_purple"
        android:fontFamily="@font/ibmplexsansregular"
        android:text="@string/show_all_details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

</androidx.constraintlayout.widget.ConstraintLayout>