<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layoutDirection="locale"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_6sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_4sdp"
        android:padding="@dimen/_8sdp">

        <TextView
            android:id="@+id/DFLogIn_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibmplexsansregular"
            android:gravity="center"
            android:text="@string/developed_by"
            android:textAlignment="center"
            android:textColor="@color/black_low"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/FDEramo_tv_web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/www_e_ramo_net"
            android:textAllCaps="true"
            android:textColor="@color/eramo_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <TextView
            android:id="@+id/FDEramo_tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="@font/ibmplexsansregular"
            android:text="@string/_201011559674"
            android:textColor="@color/eramo_color"
            android:textSize="@dimen/_12ssp"
            android:textDirection="ltr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/FDEramo_tv_web" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_74sdp"
            android:layout_height="@dimen/_74sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DFLogIn_tv_title"
            app:srcCompat="@drawable/pic_eramo"
            android:contentDescription="@null" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>